--- a/index.html
+++ b/index.html
@@ -1,16 +1,27 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
+
+
+<head>
+  <meta charset="UTF8">
+  <title> RONDON, UM COLÉGIO "AMADO" </title>
+  </head>
+
+
+
+<body>
 <p><em><strong>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</strong></em><span style="font-size:36px"><em><strong>PROJETO FINAL DE PROGRAMA&Ccedil;&Atilde;O&nbsp;<br />
-    <br />
-    <br />
-    Rondon... uma escola um tanto quanto &quot;amada&quot;...</strong></em><br />
-    mas, qual o motivo dessa fama?!</span><br />
-    <br />
-    <span style="font-size:28px">aqui citaremos imagens e provas do por que achamos isso.<br />
-    <br />
-    <br />
-    vamos come&ccedil;ar falando sobre o seu funcionamento;&nbsp;</span><br />
-    <span style="font-size:16px">os hor&aacute;rios de&nbsp; aulas s&atilde;o&nbsp;</span><br />
-    <br />
-    <br />
-    <br />
-    &nbsp;</p>
-    
+<br />
+<br />
+Rondon... uma escola um tanto quanto &quot;amada&quot;...</strong></em><br />
+mas, qual o motivo dessa fama?!</span><br />
+<br />
+<span style="font-size:28px">aqui citaremos imagens e provas do por que achamos isso.<br />
+<br />
+vamos come&ccedil;ar falando sobre o seu funcionamento;&nbsp;</span><br />
+<span style="font-size:16px">os hor&aacute;rios de&nbsp; aulas s&atilde;o&nbsp;</span><br />
+<br />
+<br />
+<br />
+&nbsp;</p>
+</body>
